resources/ej2-base/releasenotes/UWP/Release-Notes/v16.4.0.52/DocIO.md
## DocIO

### Bug Fixes
{:#DocIO-bug-fixes}

* \#223350 - Table cell is now preserved properly while opening an HTML document.
* \#222713 - The **ArgumentException** will no longer be thrown while adding a table.
* \#222608 - Font name is now preserved properly while converting an HTML document to Word document.
* \#221725 - The **ArgumentOutOfRangeException** will no longer be thrown while cloning a Word document.
* \#221611 - The **NullReferenceException** will no longer be thrown while saving a Word document.
* \#220324 - Checkbox content control state is now preserved properly while cloning a Word document.
* \#221119 - List number is now preserved properly while opening an RTF format document.
* \#218943 - List bullet is now preserved properly while opening an RTF format document.
* \#219092 - Merge field before and after text is now preserved properly while executing mail merge.
* \#222852 - Footer content is now preserved properly while merging multiple RTF documents.
* \#222588 - Formula field result is now preserved properly while updating the Word document fields.
* \#224323, \#225518, \#225883 - The **NullReferenceException** will no longer be thrown while calling the GetText API.